--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,28 +1,74 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form
+  [formGroup]="registerForm"
+  (ngSubmit)="registerForm.valid && register()"
+  autocomplete="off"
+>
   <h2 class="text-center text-primary">Sign up</h2>
   <hr />
-  <div class="form-group">
-    <div class="mb-3">
+  <div class="mb-3">
+    <label style="margin-right: 10px">I am a: </label>
+    <label class="form-check-label">
       <input
-        type="text"
-        class="form-control"
-        name="username"
-        [(ngModel)]="model.username"
-        placeholder="Username"
+        type="radio"
+        class="form-check-input"
+        value="male"
+        formControlName="gender"
       />
-    </div>
-    <div class="mb-3">
+      Male
+    </label>
+    <label class="form-check-label">
       <input
-        type="password"
-        class="form-control"
-        name="password"
-        [(ngModel)]="model.password"
-        placeholder="Password"
+        type="radio"
+        class="form-check-input ms-3"
+        value="female"
+        formControlName="gender"
       />
-    </div>
+      Female
+    </label>
   </div>
-  <div class="form-group text-center">
-    <button class="btn btn-success register-button" type="submit">
+  <app-text-input
+    [formControl]="$any(registerForm.controls['username'])"
+    [label]="'Username'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['knownAs'])"
+    [label]="'Full Name'"
+  ></app-text-input>
+  <app-date-picker
+    [formControl]="$any(registerForm.controls['dateOfBirth'])"
+    [label]="'Date of Birth'"
+  ></app-date-picker>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['city'])"
+    [label]="'City'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['country'])"
+    [label]="'Country'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['password'])"
+    [label]="'Password'"
+    [type]="'password'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['confirmPassword'])"
+    [label]="'Confirm Password'"
+    [type]="'password'"
+  ></app-text-input>
+
+  <div class="row" *ngIf="validationErrors">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">{{ error }}</li>
+    </ul>
+  </div>
+
+  <div class="text-center">
+    <button
+      class="btn btn-success register-button"
+      type="submit"
+      [disabled]="!registerForm.valid"
+    >
       Register
     </button>
     <button class="btn btn-danger" type="button" (click)="cancel()">
