sorting and filtering

--- a/client/src/app/_forms/date-picker/date-picker.component.html
+++ b/client/src/app/_forms/date-picker/date-picker.component.html
@@ -7,6 +7,7 @@
     placeholder="{{ label }}"
     bsDatepicker
     [bsConfig]="bsConfig"
+    [maxDate]="maxDate"
   />
   <div *ngIf="control.errors?.['required']" class="invalid-feedback">
     {{ label }} is required
