--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -37,6 +37,7 @@
   <app-date-picker
     [formControl]="$any(registerForm.controls['dateOfBirth'])"
     [label]="'Date of Birth'"
+    [maxDate]="maxDate"
   ></app-date-picker>
   <app-text-input
     [formControl]="$any(registerForm.controls['city'])"
