--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -19,8 +19,13 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary">
-          <i class="fa fa-envelope"></i>
+        <button
+          class="btn btn-primary"
+          routerLink="/members/{{ member.userName }}"
+          [queryParams]="{ tab: 'Messages' }"
+          target="_blank"
+        >
+          <i class="fa fa-envelope"> </i>
         </button>
       </li>
     </ul>
