adding name for user

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -7,6 +7,7 @@
         class="card-img-top img-thumbnail"
       />
       <div class="card-body">
+        <h2>{{ member.knownAs }}</h2>
         <div
           class="mb-2"
           *ngIf="
