--- a/client/src/app/likes/likes.component.html
+++ b/client/src/app/likes/likes.component.html
@@ -1,6 +1,7 @@
 <div class="text-center mt-3">
   <h2>
-    {{ predicate === "liked" ? "Members I like" : "Members who like me" }}
+    {{ predicate === "liked" ? "Members I like" : "Members who like me" }} -
+    {{ members.length }}
   </h2>
 </div>
 
