--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -19,6 +19,14 @@
       />
       <div class="card-body">
         <div>
+          <strong>Faculty:</strong>
+          <p>{{ member.facultyShortName }}</p>
+        </div>
+        <div>
+          <strong>Specialization:</strong>
+          <p>{{ member.specializationName }}</p>
+        </div>
+        <div>
           <strong>Location:</strong>
           <p>{{ member.city }}, {{ member.country }}</p>
         </div>
