--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLink="/" routerLinkActive="active"
-      >Dating App</a
+      >Social Media Students App</a
     >
 
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -12,12 +12,12 @@
             routerLink="/members"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
-            >Matches</a
+            >Students</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
-            >Lists</a
+          <a class="nav-link" routerLink="/likes" routerLinkActive="active"
+            >Likes</a
           >
         </li>
         <li class="nav-item">
@@ -31,11 +31,6 @@
           >
         </li>
       </ng-container>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/errors" routerLinkActive="active"
-          >Errors</a
-        >
-      </li>
     </ul>
 
     <div
